--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,3 +32,6 @@ dev = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.metadata]
+allow-direct-references = true
