--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
 
 [project.scripts]
 chatbot-cli = "oci_genai_chatbot.cli:main"
+oci-genai = "oci_genai_chatbot.codex_cli:codex"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
